fix(pagination): center-align number input text in  pagination context, add border back in

--- a/src/components/reusable/numberInput/numberInput.scss
+++ b/src/components/reusable/numberInput/numberInput.scss
@@ -37,6 +37,7 @@ input {
   -webkit-appearance: none;
   appearance: none;
   display: block;
+  text-align: var(--kyn-number-input-text-align, start);
 
   flex: 1 1 auto;
   min-width: var(--kyn-number-input-inner-min-width);
@@ -96,6 +97,11 @@ input {
   &.no-border {
     border-color: transparent;
     background: transparent;
+  }
+
+  &.inline-border {
+    border-color: var(--kd-color-border-forms-default);
+    background: var(--kd-color-background-forms-default);
   }
 }
 
